Letzter Stil- und Textfeinschliff

--- a/index.htm
+++ b/index.htm
@@ -141,15 +141,13 @@
               geliebten Stadtforst heckt sie schließlich die geheimen Schauplätze und Ideen für Ihre Geschichten aus.
             </p>
 
-            <!--<p class="zitat text-center">
-              &bdquo;Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2.&rdquo;</p>
-            <p class="fan fan-red text-center"> evtl. Ehme de Riese, Titel</p>
-            <p class="zitat text-center">
-              &bdquo;Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2.&rdquo;</p>
-            <p class="fan fan-red text-center"> Sabine Schröter, Thalia Wolfsburg, Kinderbuchabteilung</p>
- -->
             <p>
-              Weitere kreative Seiten der Autorin: <a href="http://www.nicpic.de">www.nicpic.de</a></p>
+              Weitere kreative Seiten der Autorin: <a href="http://www.nicpic.de" target="_blank">www.nicpic.de</a></p>
+			<hr />
+
+            <p class="zitat">
+              &bdquo;&hellip;Ein wunderbares Märchen über Freundschaft, Magie und Fantasie mit liebenswerten Figuren &mdash; voller Wärme und Poesie erzählt und ganz toll und liebevoll illustriert! Ein Lesespaß für die ganze Familie und es spielt direkt vor unserer Haustür!&rdquo;</p>
+            <p class="fan fan-red"> Sabine Schröter, Thalia Wolfsburg, Kinderbuchabteilung</p>
           </div>
         </div>
       </div>
@@ -182,7 +180,7 @@
               der magischen Feensage aus dem Hasselbachtal im Auftrag des Wolfsburger Planetariums lieh Sie &bdquo;Himmeline Fadenflitz&ldquo; Ihre 
               Stimme.
             </p>
-            <p class="text-center">Mehr über Michaela Frech auf: <a href="http://www.michaela-frech.de">www.michaela-frech.de</a></p>
+            <p>Mehr über Michaela Frech auf: <a href="http://www.michaela-frech.de" target="_blank">www.michaela-frech.de</a></p>
           </div>
         </div>
       </div>
@@ -221,31 +219,31 @@
               </p>
 			
             <hr />
-           <!-- <p class="zitat text-center">
+           <!-- <p class="zitat">
               &bdquo;Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2.&rdquo;
               </p>
-            <p class="fan fan-light-blue text-center">
+            <p class="fan fan-light-blue">
               Dirk Schlesier, wissenschaftlicher Leiter des Planetariums in Wolfsburg</p>-->
 
-            <p class="zitat text-center">
+            <p class="zitat">
               &bdquo;Schimmerie Harztropfs Geschichte ist etwas ganz Besonderes. Man kann sie gemütlich auf der Couch beim Lesen entdecken, bei einem 
               Spaziergang im Wolfsburger Hasselbachtal oder unter dem prächtigen Sternenhimmel des Planetariums. Hierfür Bild, Stimmen und Musik 
               abzumischen und zu arrangieren ist eine spannende Aufgabe. Vor allem, wenn man zum Schluss im wahrsten Sinne des Wortes etwas "Feenstaub" 
               drüber pusten darf.&rdquo;
               </p>
-            <p class="fan fan-light-blue text-center">
+            <p class="fan fan-light-blue">
               Isabell Schaffer,
-              <br />Verantwortliche für die wissenschaftliche Visualisierung im Planetarium Wolfsburg
+              <br />Wissenschaftliche Visualisierung, Planetarium Wolfsburg
               </p>
 
-            <p class="zitat text-center">
+            <p class="zitat">
               &bdquo;Ein ganz zauberschönes Kinderbuch mit Illustrationen, die dich sofort einfangen und das dann auch noch in Wolfsburg spielt…
               natürlich wollte ich für die Planetariumproduktion dabei sein und hatte sehr viel Spaß als Sprecherin der beiden so unterschiedlichen 
               Charaktere.&rdquo;
               </p>
-            <p class="fan fan-light-blue text-center">
-              Cinzia Rizzo, Sprecherin "Schimmerie Harztropf" und "Lusilla Trälla"
-              <br /> hauptberuflich Sängerin und Mitarbeiterin des Tanzenden Theaters Wolfsburg
+            <p class="fan fan-light-blue">
+              Cinzia Rizzo, Tanzendes Theater Wolfsburg
+              <br /> Sprecherin "Schimmerie Harztropf" und "Lusilla Trälla"
             </p>
           </div>
         </div>
@@ -280,16 +278,16 @@
             	haben, ist für ihre persönliche Entwicklung unerlässlich. Unter freiem Himmel gedeihen der Verstand und das soziale Miteinander am 
             	besten, denn der Phantasie sind dort keine Grenzen gesetzt…
             </p>
-            <p class="zitat text-center">
+            <p class="zitat" style="text-align:center">
             	"Wetter ist, wenn man draußen ist!"
             </p>
-            <p class="fan fan-dark-blue text-center">
+            <p class="fan fan-dark-blue" style="text-align:center">
             	Leticia, 4 Jahre
             </p>
-              <!--<p class="zitat text-center">
+              <!--<p class="zitat">
               &bdquo;Dies sind 2 nette Sätze über das Buch?/Wolfsburg.... Hier kommt Nummer 2.&rdquo;
               </p>
-            <p class="fan fan-dark-blue text-center">
+            <p class="fan fan-dark-blue">
               Stephanie Ristig- Bresser, Redakteurin beim 'Bürgermagazin' Wolfsburg
               </p> -->
           </div>
@@ -381,28 +379,23 @@
       <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-20">
         <div class="hsContainer">
-          <div class="hsContent text-center">
-            <p>
+          <div class="hsContent">
+	          <h2>Informationen zum Buch</h2>
+          
+            <p class="text-justify">
               "Schimmerie Harztropf und das Sternenmeer" ist überall im deutschen Buchhandel erhältlich.
-              <br /> Speziell bei Thalia in Wolfsburg und in den umliegenden REAL-Märkten finden Sie ein größeres Sortiment in der Auslage. 
+              Speziell bei Thalia in Wolfsburg und in den umliegenden REAL-Märkten finden Sie ein größeres Sortiment in der Auslage. 
               Weitere Verkaufsstellen sind bereits in der Planung.
-              <br />
-              <br /> Nicole Schaa: Schimmerie Harztropf und das Sternenmeer
+              </p>
+
+              <p class="text-left">
+              	Nicole Schaa: Schimmerie Harztropf und das Sternenmeer
               <br /> ab 5 Jahren, Hardcover, A5, fadengeheftet, mit Leseband und Glitzerlack
               <br /> 116 Seiten mit zahlreichen farbigen Illustrationen von Michaela Frech
               <br /> ISBN: 978-3-942428-95-8
               <br /> 12,99 Euro
+            </p>
 
-              <br />
-              <br/>
-            </p>
-            <p>
-            	Möchtest Du Schimmerie schreiben? Sie freut sich riesig
-              <br /> über Deine Post und wird Dir ganz bestimmt eine Antwort schicken!
-              <br />
-              <a href="&#109;&#097;&#105;&#108;&#116;&#111;:hallo&#064;schimmerie&#045;harztropf.de">
-              <span class=lelink>hallo&#064;</span>schimmerie&#045;harztropf.de</a>
-            </p>
           </div>
         </div>
       </div>
@@ -455,13 +448,22 @@
 					data-anchor-target="#slide-24">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <p class="text-center">KONTAKT
-              <br/>
-              <br/>
-              <br /> Nicole Schaa | Freischaffende Künstlerin | Autorin
-              <br /> Unter den Eichen 47 |   Steimker Berg |  38446 Wolfsburg
-              <br /> Telefon: 0 53 61 / 8 48 13 48 | E-Mail: <a href="&#109;&#097;&#105;&#108;&#116;&#111;:hallo&#064;schimmerie&#045;harztropf.de">
+            <p  class="text-center">
+            	Möchtest Du Schimmerie schreiben? <br />
+				Sie freut sich riesig über Deine Post und wird Dir ganz bestimmt eine Antwort schicken!
+              <br />
+              <a href="&#109;&#097;&#105;&#108;&#116;&#111;:hallo&#064;schimmerie&#045;harztropf.de">
               <span class=lelink>hallo&#064;</span>schimmerie&#045;harztropf.de</a>
+              <br /> 
+            </p>
+            <p class="text-center">
+            	KONTAKT
+            </p>
+            
+            <p class="text-center">Nicole Schaa | Freischaffende Künstlerin | Autorin
+              <br /> Unter den Eichen 47 |   Steimker Berg |  38446 Wolfsburg
+              <br /> Telefon: 0 53 61 / 8 48 13 48 | E-Mail: <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#097;&#105;l&#064;nicpic.de">
+              <span class=lelink>&#109;&#097;&#105;l&#064;</span>nicpic.de</a>
               <br/>
             </p>
             <p class="text-center"> Umsatzsteuer-ID gemäß §27 a UStG: DE 227 520 707
